Random cleanups to model files